--- a/config/cable.yml
+++ b/config/cable.yml
@@ -4,8 +4,13 @@ development:
 test:
   adapter: test
 
-production:
+# production:
   # adapter: redis
   # url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
   # channel_prefix: breakin_community_production
-  adapter: async
+  # adapter: async
+  
+production:
+  adapter: redis
+  port: 6379
+  url: <%= ENV['ELASTICACHE_REDIS_URL'] %>
