--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,30 @@
 version: '3'
-volumes:
-  mysql-data:
-
 services:
-  web:
-    build: .
-    ports:
-      - '3000:3000'
-    volumes:
-      - '.:/breakin-community'
-    environment:
-      - 'DATABASE_PASSWORD=password'
-    tty: true
-    stdin_open: true
-    depends_on:
-      - db
-    links:
-      - db
-
   db:
     image: mysql:5.6
-    volumes:
-      - 'mysql-data:/var/lib/mysql'
     environment:
-      - 'MYSQL_DATABASE=breakin-community'
-      - 'MYSQL_USER=root'
-      - 'MYSQL_PASSWORD=password'
-      - 'MYSQL_ROOT_PASSWORD=password'
-      - 'MYSQL_ALLOW_EMPTY_PASSWORD=password'
-      - 'MYSQL_RANDOM_ROOT_PASSWORD=password'
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: root
+    volumes:
+      - mysql-data:/var/lib/mysql
     ports:
-      - "4306:3306"
+      - "4306:3306" #sequelproでDBを可視化するため
+
+  web:
+    tty: true
+    stdin_open: true
+    build: .
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    volumes:
+      - .:/myproject
+      - bundle:/usr/local/bundle
+    ports:
+      - "3000:3000"
+    links:
+      - db
+    depends_on:
+      - db
+
+volumes:
+  mysql-data:
+  bundle:
