--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ before_install:
 script:
   - docker-compose exec --env 'RAILS_ENV'=test web rails db:create
   - docker-compose exec --env 'RAILS_ENV'=test web rails db:migrate
-  - docker-compose exec --env 'RAILS_ENV'=test web bundle exec rspec spec/models/user_spec.rb 
+  - docker-compose exec --env 'RAILS_ENV'=test web bundle exec rspec 
  
