--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,6 @@ before_install:
 script:
   - docker-compose exec --env 'RAILS_ENV'=test web rails db:create
   - docker-compose exec --env 'RAILS_ENV'=test web rails db:migrate
+  - docker-compose exec --env 'RAILS_ENV'=test web bundle exec rails webpacker:compile
   - docker-compose exec --env 'RAILS_ENV'=test web bundle exec rspec 
  
