--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ servis: docker
 
 before_install:
   - docker-compose up --build -d
+  - brew cask install google-chrome
  
 script:
   - docker-compose exec --env 'RAILS_ENV'=test web rails db:create
