--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ servis: docker
 
 before_install:
   - docker-compose up --build -d
-  - brew cask install google-chrome
+addons:
+  chrome: stable
  
 script:
   - docker-compose exec --env 'RAILS_ENV'=test web rails db:create
