--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ addons:
 script:
   - docker-compose exec --env 'RAILS_ENV'=test web rails db:create
   - docker-compose exec --env 'RAILS_ENV'=test web rails db:migrate
+  - docker-compose exec --env 'RAILS_ENV'=test web rm -rf bin/webpack*
+  - docker-compose exec --env 'RAILS_ENV'=test web rails webpacker:install
   - docker-compose exec --env 'RAILS_ENV'=test web bundle exec rails webpacker:compile 
   - docker-compose exec --env 'RAILS_ENV'=test web bundle exec rspec 
  
